--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
     line-height: 1.5;
 }
 
-/* General container */
+/* Buttons and Links */
 
 a {
     color: black;
@@ -55,10 +55,10 @@ a:hover {
 
 .btn-primary {
     background: #058598;
-    /* background: peachpuff; */
     color: white;
 }
 
+/* Title fonts */
 
 h1, h2, h3, h4, h5 {
     font-weight: 500
@@ -73,7 +73,13 @@ h1 {
     color: black;
 }
 
+/* General Class Alterations */
+
 .title {
+    text-align: center;
+}
+
+.container {
     text-align: center;
 }
 
